--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,19 +8,19 @@
     <string name="crime_list_txt">Crime Title</string>
     <string name="crime_list_date">Crime Date</string>
     <string name="btn_call_police">Call police</string>
-    <string name="full_date_time_format"> EEEE, dd MMMM yyyy, HH:mm </string>
+    <string name="full_date_time_format" translatable="false"> EEEE, dd MMMM yyyy, HH:mm </string>
     <string name="crime_solved_txt">Crime solved</string>
     <string name="button_go_to_begin">Go to begin</string>
     <string name="button_go_to_end">Go to end</string>
     <string name="date_picker_title">Date of crime:</string>
     <string name="time_picker_title">Time of crime:</string>
-    <string name="full_time_format"> HH:mm </string>
+    <string name="full_time_format" translatable="false"> HH:mm </string>
     <string name="new_crime">New Crime</string>
     <string name="show_subtitle">Show Subtitle</string>
     <string name="hide_subtitle">Hide Subtitle</string>
     <string name="subtitle_format">%1$d crimes</string>
     <string name="delete_crime">Delete Crime</string>
-    <string name="empty_list">Список пуст</string>
+    <string name="empty_list">List is empty</string>
     <plurals name="subtitle_plural">
         <item quantity="one">%1$d crime</item>
         <item quantity="other">%1$d crimes</item>
@@ -37,7 +37,4 @@ The crime was discovered on %2$s. %3$s, and %4$s
     <string name="crime_report_suspect">the suspect is %s.</string>
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="send_report">Send crime report via</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
