--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,12 @@ The crime was discovered on %2$s. %3$s, and %4$s
     <string name="crime_report_suspect">the suspect is %s.</string>
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="send_report">Send crime report via</string>
+    <string name="crime_photo_button_description">Take photo of crime scene</string>
+    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
+    <string name="crime_photo_image_description">Crime scene photo (set)</string>
+    <string name="crime_call_suspect">Call to suspect</string>
+    <string name="crime_full_image">Full photo of crime</string>
+    <string name="txt_label_date">Date of crime</string>
+    <string name="txt_label_time">Time of crime</string>
+    <string name="txt_label_call">Call to suspect</string>
 </resources>
